SONAR-7833 fix IT QualityGateTest to not use WS /api/ce/logs